# crescent

./: .gitmodules  CMakeLists.txt  CommandModule.cpp  CommandModule.h  Ephemeris.cpp  EphemerisManager.cpp  EphemerisManager.h  EphemerisObject.h  Event.cpp  Event.h  EventCycle.cpp  EventCycle.h  FileIO.cpp  FileIO.h  LunarModule.cpp  LunarModule.h  Matrix.cpp  Matrix.h  Orbital.cpp  Orbital.h  README.md  RigidBody.h  ServiceModule.cpp  ServiceModule.h  SharedData.cpp  SharedData.h  SharedData_ut.cpp  Simulation.cpp  Simulation.h  Spacecraft.cpp  Spacecraft.h  Telemetry.cpp  Telemetry.h  TimeKeeper.cpp  TimeKeeper.h  Vector.cpp  Vector.h  Verbosity.cpp  Verbosity.h  abort.h  (+30 more)
CommandLine/: CommandLine.cpp  CommandLine.h  CommandLine_ut.cpp  README.md  doxygen_config
config/: ephemeris  masses  telemetry
dynamics/: EventCycle.cpp  EventCycle.h  Telemetry.cpp  Telemetry.h  TimeKeeper.cpp  TimeKeeper.h  Verbosity.cpp  Verbosity.h  dynamics.cpp  dynamics.sln  dynamics.vcxproj  dynamics.vcxproj.filters  read_sim_output.m  stdafx.cpp
dynamics/Debug/: dynamics.ilk  dynamics.pch  vc141.idb
dynamics/Debug/dynamics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dynamics.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/crescent/: shared_data.h
math/: Matrix.h  Quaternion.h  RK4.h  Vector.h
scripts/: read_sim_output.m
src/: main.cc
